# rm-test

./: CMakeLists.txt
ex1/: ex1.cpp
ex2/: Group.cpp  Group.h  Pattern.cpp  Pattern.h  ex2.cpp
ex3/: ex3.cpp
ex4/: ex4.cpp  ex4_2.cpp
ex4/output/: d-result.avi  d_res.avi
